<resources>
    <string name="app_name">CryptoTracker</string>
    <string name="retry">Retry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currencies">Currencies</string>
    <string name="about">About</string>
    <string name="menu">Menu</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="currency">Currency:</string>
    <string name="currency_details">Currency details</string>
    <string name="username">Username...</string>
    <string name="e_mail">E-mail...</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password...</string>
    <string name="user">User</string>
    <string name="username_already_exists">Username already exists!</string>
    <string name="user_name_is_required">User name is required!</string>
    <string name="password_is_required">Password is required</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
</resources>