<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_200"
    tools:context=".fragment.LoginFragment">

    <Button
        android:id="@+id/btnBack"
        android:text="&lt;"
        android:textSize="@dimen/_20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/login"
        android:textColor="@color/primary_green"
        android:gravity="center"
        android:padding="@dimen/_10dp"
        android:textSize="40sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etUsername"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:padding="@dimen/_10dp"
        android:text="@string/login"
        android:textColor="@color/primary_green"
        android:layout_marginVertical="20dp"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvGoToRegister"
        android:text="Don't have an account? Register"
        android:textColor="@color/white"
        android:padding="@dimen/_10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>